samples/_failures_safe/1761447700_8db1a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00d0ef23.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_00d0ef23.c:152:9: error: expected declaration or statement at end of input
  152 |         default: return "UNKNOWN";
      |         ^~~~~~~
./samples/SAFE/__tmp_00d0ef23.c:152:9: error: expected declaration or statement at end of input
